feat: paginas das bicicletas prontas

--- a/index.html
+++ b/index.html
@@ -3,13 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
     <title>Bikcraft - Bicicletas Elétricas</title>
     <meta
       name="description"
       content="Bicicletas elétricas de alta precisão e qualidade,  feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft."
     />
-
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -18,7 +16,6 @@
       rel="stylesheet"
     />
   </head>
-
   <body>
     <header class="header-bg">
       <div class="header container">
@@ -35,7 +32,6 @@
         </nav>
       </div>
     </header>
-
     <main class="introducao-bg">
       <div class="introducao container">
         <div class="introducao-conteudo">
@@ -56,7 +52,6 @@
         </div>
       </div>
     </main>
-
     <article class="bicletas-lista">
       <h2 class="font-1-xxl container">
         escolha a sua<span class="cor-p1">.</span>
@@ -71,14 +66,14 @@
           </a>
         </li>
         <li>
-          <a href="./bicicletas/magig.html">
+          <a href="./bicicletas/nimbus.html">
             <img src="./img/bicicletas/nimbus-home.jpg" alt="Bicicleta preta" />
             <h3 class="font-1-xl">Nimbus Stark</h3>
             <span class="font-2-m cor-8">R$ 4999</span>
           </a>
         </li>
         <li>
-          <a href="./bicicletas/magig.html">
+          <a href="./bicicletas/nebula.html">
             <img src="./img/bicicletas/nebula-home.jpg" alt="Bicicleta preta" />
             <h3 class="font-1-xl">Nebula Cosmic</h3>
             <span class="font-2-m cor-8">R$ 3999</span>
