--- a/bicicletas.html
+++ b/bicicletas.html
@@ -72,7 +72,7 @@
                 <p>Rastreador</p>
               </li>
             </ul>
-            <a class="botao seta" href="./bicicletas/ninbus.html">Mais sobre</a>
+            <a class="botao seta" href="./bicicletas/nimbus.html">Mais sobre</a>
           </div>
         </div>
       </div>
