--- a/contato.html
+++ b/contato.html
@@ -8,6 +8,12 @@
     <meta name="description" content="Contato bikcraft" />
 
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@400;500&Merriweather:wght@900&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body id="contato">
