--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
       <ul>
         <li>
-          <a href="./bicicletas/magig.html">
+          <a href="./bicicletas/magic.html">
             <img src="./img/bicicletas/magic-home.jpg" alt="Bicicleta preta" />
             <h3 class="font-1-xl">Magic Migth</h3>
             <span class="font-2-m cor-8">R$ 2499</span>
